crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisiability@source-dependency-changed-project-model.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/mod.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'linux-64'
    Diagnostic severity: error
    Caused by: the locked metadata of 'child-package' package changed
