crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisiability@source-recursive-dependency-mismatch.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/mod.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'win-64'
    Diagnostic severity: error
    Caused by: failed to discover a valid project manifest, the source path '/Users/graf/oss/pixi/tests/data/non-satisfiability/source-recursive-dependency-mismatch/child-package' could not be found
